syntax = "proto3";

package com.road.yishi.proto.active;

message GiftReceiveReq {
  int32 op = 1;
  int32 site = 2;
}
